--- a/package.json
+++ b/package.json
@@ -14,8 +14,19 @@
   "keywords": [],
   "author": "",
   "license": "ISC",
-  "description": "",
   "dependencies": {
     "redux": "^4.2.0"
-  }
+  },
+  "devDependencies": {
+    "parcel-bundler": "^1.12.5"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/namwookyung/vanilla-redux.git"
+  },
+  "bugs": {
+    "url": "https://github.com/namwookyung/vanilla-redux/issues"
+  },
+  "homepage": "https://github.com/namwookyung/vanilla-redux#readme",
+  "description": ""
 }
